src/objects/Asset_Request__c.object
<CustomObject>
    <fields>
        <fullName>Asset_Active_End_Date__c</fullName>
        <inlineHelpText>Please enter the start and end dates for the asset&apos;s use</inlineHelpText>
        <label>Asset Active End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Asset_Active_Start_Date__c</fullName>
        <inlineHelpText>Please enter the start and end dates for the asset&apos;s use</inlineHelpText>
        <label>Asset Active Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>How_will_the_Asset_be_Used__c</fullName>
        <inlineHelpText>Describe how the device or service is using this asset (box, hero image, etc.)</inlineHelpText>
        <label>How will the Asset be Used?</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <inlineHelpText>Please enter any other relevant information for the request for approval</inlineHelpText>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the partner for whom you are requesting access</inlineHelpText>
        <label>Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Asset Requests</relationshipLabel>
        <relationshipName>Asset_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Asset Request</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AR-{0000}</displayFormat>
        <label>Asset Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>